# libmng

./: .cvsignore  CHANGES  Makefile.am  README  README.config  README.contrib  README.footprint  autogen.sh  configure.in  libmng.h  libmng_callback_xs.c  libmng_chunk_descr.c  libmng_chunk_descr.h  libmng_chunk_io.c  libmng_chunk_io.h  libmng_chunk_prc.c  libmng_chunk_prc.h  libmng_chunk_xs.c  libmng_chunks.h  libmng_cms.c  libmng_cms.h  libmng_conf.h  libmng_data.h  libmng_display.c  libmng_display.h  libmng_error.c  libmng_filter.c  libmng_hlapi.c  libmng_jpeg.c  libmng_object_prc.c  libmng_object_prc.h  libmng_objects.h  libmng_pixels.c  libmng_pixels.h  libmng_prop_xs.c  libmng_read.c  libmng_read.h  libmng_trace.c  libmng_trace.h  libmng_types.h  (+48 more)
Unix/mngtree/: mngtree.c
contrib/: contrib.readme
contrib/GTK/gtk-mng-view/: Makefile  dummy.c  gtk-mng-view.c
contrib/delphi/: libmng.pas
contrib/delphi/mngview/: Main.pas
contrib/gcc/fbmngplay/: console.c  console.h  fbmngplay.c  fbmngplay.h  messages.c  messages.h  mng.c  mng.h
contrib/gcc/gtk-mng-view/: Makefile  dummy.c  gtk-mng-view.c  gtk-mng-view.h
contrib/gcc/mngtree/: mngtree.c
contrib/gcc/sdl-mngplay/: mngplay.c
contrib/gcc/xmngview/: Makefile  README  color.c  xmng.h  xmngplay.c  xmngview.c
contrib/mngplay/: AUTHORS  Makefile.in  README  autogen.sh  configure  configure.in  mkinstalldirs  mngplay.c
contrib/mngplg/: readme.txt
contrib/msvc/mngplg/: readme.txt
contrib/msvc/mngplg/mngplg-src-1.0.1/: npmngplg.c
contrib/sdl/mngplay/: AUTHORS  Makefile.am  README  acinclude.m4  configure.in  mngplay.c
doc/: doc.readme  libmng.txt
doc/man/: libmng.3
doc/rpm/: libmng.spec
makefiles/: MAKEFILE.README  Makefile.am  README  configure.in  makefile.bcb3  makefile.linux  makefile.unix
special/mozcfg/: mozlibmngconf.h
